fix: 修复 wrangler.toml 配置以支持本地开发和构建
- 添加占位符 ID 满足 wrangler 配置验证
- 创建 wrangler.local.toml 用于本地开发配置
- 本地测试通过，构建成功
Co-authored-by: monkeycode-ai <monkeycode-ai@chaitin.com>

--- a/wrangler.local.toml
+++ b/wrangler.local.toml
@@ -12,13 +12,13 @@ MEDIA_R2_PREFIX = "media"
 
 [[kv_namespaces]]
 binding = "CONTENT_KV"
-id = "placeholder-kv-id"
-preview_id = "placeholder-kv-preview"
+id = "test-kv-namespace"
+preview_id = "test-kv-preview"
 
 [[r2_buckets]]
 binding = "MEDIA_BUCKET"
-bucket_name = "placeholder-bucket-name"
-preview_bucket_name = "placeholder-preview-bucket"
+bucket_name = "test-media-bucket"
+preview_bucket_name = "test-media-preview"
 
 [[analytics_engine_datasets]]
 binding = "WORKERS_ANALYTICS"
